@@ -60,6 +60,18 @@ is validated, but all objects.
 In order to make a property required you now need to add the NotEmptyValidator
 to your property. The return value of validators is now optional.
 
+* Support of custom language fallbacks
+
+Please be aware of the fact that the content_fallback setting respects the
+already documented customizable language fallback feature like
+"sys_language_mode = content_fallback; 1,2" much more completely now.
+In general this means that you can define e.g. German as fallback language
+for a different region like e.g. Austria instead of the site-wide English
+default language. The setting is taken into account independently on page and
+content level. The latter only if related extensions are using the new
+API method "getRecordOverlayWithFallback" instead of the
+old (deprecated) "getRecordOverlay".
+
 -------------------------------------------------------------------------------
 Fluid
 -------------------------------------------------------------------------------
